force-app/main/default/objects/Health_Status_Referral__c/fields/General_Status__c.field-meta.xml
<CustomField>
    <fullName>General_Status__c</fullName>
    <inlineHelpText>Rate your current general status</inlineHelpText>
    <label>General Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>