force-app/main/default/objects/Health_Status_Referral__c/fields/Is_Current_Doctor_Do_Normally__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Doctor_Do_Normally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Doctor Do Normally</label>
    <type>Checkbox</type>
</CustomField>