force-app/main/default/objects/Health_Status_Referral__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Health Status Referral</relationshipLabel>
    <relationshipName>Health_Status_Referral</relationshipName>
    <type>Lookup</type>
</CustomField>