force-app/main/default/objects/Health_Status_Referral__c/fields/Tretment_Is_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Tretment_Is_Helpful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tretment Is Helpful?</label>
    <type>Checkbox</type>
</CustomField>